...
let RED = [252, 76, 93]
let GREEN = [114,224,110]
let BLUE = [76,223,252]
let YELLOW = [241,246,86]
let PURPLE = [129,79,255]
let HOT_PINK = [250,75,212]
let SETTINGS = ["Toggle Theme", "Toggle Format", "Toggle Colorblind", "Toggle View"]
let SETTINGS_ICONS = ["darkmode_icon", "24hr_icon", "colorblind_icon", "linemode_icon"]
let HOURS = 24;

import SwiftUI
import Firebase
import GoogleSignIn
...
                      VStack(alignment: .leading) {
                        Spacer()
                        Text("Authenticate with your email:")
                          .padding(.bottom, 60)
                            .font(Font.custom("Lato-Light", size: 20))
                            
                        CustomStyledTextField(placeholder: "Email", symbolName: "person.circle.fill"
                            //if()
                        
                        
//                        ref.child("user_id").child("child").setValue(123456)
//                        //ref.child("odd nums").child.setValue(13579)
//
...
//                        if let id = snapshot.value as? Int {
//                        print("The value from the database: \(id)")
//                        }
//                        })
                        
                        ).environmentObject(data)
                        CustomStyledButton(title: "Send Sign In Link / Login", action: {
                            sendSignInLink()
                            data.notificationManager.retrieveFromDB(email: data.parsedEmail)
//                            data.notificationManager.schedule()
                        })
                            .disabled(self.data.email.isEmpty)
                        Spacer()
...
                                        print("\(e.get_type())")
                                    } }}) {
                                    ZStack {
                                        Circle()
                                            .foregroundColor(Color(rgb: InfoView.translateColor(color: self.data.currentEvent >= 0 ? self.data.events[self.data.currentEvent].get_color() : "WHITE")))
                                            .frame(width: UIScreen.main.bounds.size.width / 4, height: UIScreen.main.bounds.size.width / 4, alignment: .center)
                                        Image("edit_icon")
                                            .foregroundColor(Color(rgb: DARK_GREY, alpha: 0.9))
                                            .scaleEffect(1.8)
                                            .offset(x: 1)
                                    }
                                    
                                }.padding(.horizontal, 50)
...
