...
//Alert, Cue, and Task toggable buttons
                VStack{
                    Divider()
                    let alertToggled = Binding<Bool>(get: { self.attr.alertToggled }, set: { self.attr.alertToggled = $0; self.attr.cueToggled = false; self.attr.taskToggled = false })
                    let cueToggled = Binding<Bool>(get: { self.attr.cueToggled }, set: { self.attr.alertToggled = false; self.attr.cueToggled = $0; self.attr.taskToggled = false })
                    let taskToggled = Binding<Bool>(get: { self.attr.taskToggled }, set: { self.attr.alertToggled = false; self.attr.cueToggled = false; self.attr.taskToggled = $0 })
                    Toggle("Alert event", isOn: alertToggled)
                        .padding(25)
                    Divider()
                    Toggle("Cue event", isOn: cueToggled)
                        .padding(25)
                    Divider()
                    Toggle("Task event", isOn: taskToggled)
...
                }.padding(.top) //VStack
//Description of the event field
                VStack(){
                    Text("Description of your event")
                    .font(.callout)
                    .bold()
                    TextField("Enter the description..", text: $attr.description).colorInvert()
                        .textFieldStyle(RoundedBorderTextFieldStyle())
                }.frame(width: 300, height: 75, alignment: .top).padding() //VStack
//Field for which color has been selected for the event
                VStack(){
                    TextField("Color: ", text: $attr.colorSelected)
                        .font(.callout)
...
